static/style/recom.css
.main {
	display: flex;
	flex-direction: column;
	gap: 4rem;
	width: 100%;
	min-height: 100vh;
	padding: 1rem;
}

.row1 {
	position: relative;
	padding: 1rem;
	overflow: hidden;
	min-height: 20rem;
}
.content {
	display: flex;
	gap: 10rem;
  	align-items: center;
	z-index: 5;
	position: relative;
}

.content::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: inherit;
    filter: blur(10px);
    z-index: -1;
}

#poster {
	min-width: 244px;
	min-height: 293px;
	position: relative;
	z-index: 1;
	box-shadow: 0px 4px 8.1px 7px rgba(0, 0, 0, 0.25);
	border-radius: 11.11px;
	overflow: hidden;
	cursor: default;
}

.text {
	display: flex;
	z-index: 10;
}

.bg-material {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-size: cover;
	filter: blur(50px);
}

.row2 {
	width: 100%;
	display: flex;
	gap: 1rem;
}

.bg-material-recom {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-size: cover;
	filter: blur(20px);
}

.curver {
	border-radius: 1rem;
}

